# funding-rate

./: README.md
oracle-web/src/: main.tsx  types.ts
oracle-web/src/components/: SnapshotTable.tsx
server/: .dockerignore  Cargo.toml  Dockerfile  README.md
server/crates/exchanges/: Cargo.toml
server/crates/exchanges/src/: exchange_rate.rs  lib.rs
server/crates/exchanges/src/binance/: asset.rs  fee.rs  mod.rs  perp.rs  spot.rs
server/crates/exchanges/src/bitget/: mod.rs  perp.rs  spot.rs
server/crates/exchanges/src/bithumb/: asset.rs  mod.rs  orderbook.rs  spot.rs
server/crates/exchanges/src/bybit/: mod.rs  perp.rs  spot.rs
server/crates/exchanges/src/okx/: mod.rs  perp.rs  spot.rs
server/crates/oracle/src/: collector.rs  main.rs
server/crates/trade/: Cargo.toml
server/crates/trade/src/: lib.rs  main.rs
server/crates/trade/src/arbitrage/: binance_trader.rs  mod.rs  state.rs  strategy.rs
server/crates/trade/src/arbitrage/strategy/: cross_basis.rs  intra_basis.rs
server/crates/trade/src/exchange/: mod.rs
server/crates/trade/src/exchange/binance/: asset.rs  mod.rs  orderbook.rs
server/crates/trade/src/exchange/bithumb/: asset.rs  fee.rs  mod.rs  orderbook.rs
server/crates/trade/src/explore/: mod.rs
server/crates/trade/src/logger/: mod.rs
server/crates/trade/src/record/: mod.rs
server/crates/trade/src/server/: mod.rs
server/crates/trade/src/trader/: binance.rs  bithumb.rs  mod.rs
server/crates/trade/src/trader/binance/: futures_api.rs  mod.rs  order_client.rs  price_feed.rs  spot_api.rs  trader.rs  types.rs  user_stream.rs
server/src/: collector.rs  main.rs  model.rs  server.rs
server/src/exchange/: binance.rs  bitget.rs  bybit.rs  mod.rs  okx.rs
simulator/: .gitignore  Cargo.toml  README.md
simulator-web/: README.md  index.html  package-lock.json  package.json  vite.config.ts
simulator-web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts
simulator-web/src/components/: CandleChart.tsx  OrderBook.tsx  OrderForm.tsx  TradeTable.tsx
simulator-web/src/hooks/: useWebSocket.ts
simulator/src/: gateway.rs  main.rs  websocket.rs
simulator/src/domain/: mod.rs  order.rs  snapshot.rs  trade.rs
simulator/src/engine/: matching_engine.rs  mod.rs
simulator/src/market/: composite.rs  mod.rs  noise_trader.rs  passive_mm.rs  regime.rs  spike_generator.rs  whale_agent.rs
trading-web/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
trading-web/src/: App.tsx  main.tsx  types.ts
trading-web/src/components/: ConsolePanel.tsx  PositionTable.tsx  TradeTable.tsx
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  index.css  types.ts
web/src/components/: SnapshotTable.tsx
