[workspace]
members = ["crates/oracle", "crates/interface", "crates/trade", "crates/exchanges"]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures = "0.3"
futures-util = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
async-trait = "0.1"
thiserror = "1"
axum = { version = "0.7", features = ["macros"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
color-eyre = "0.6"
eyre = "0.6"
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
dotenv = "0.15"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
ctor = "0.2"
jsonwebtoken = "9"
uuid = { version = "1", features = ["v4"] }
