[package]
name = "exchanges"
version = "0.1.0"
edition = "2021"

[dependencies]
interface = { path = "../interface" }
tokio = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
futures-util = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
eyre = { workspace = true }
tokio-tungstenite = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
