[package]
name = "trade"
version = "0.1.0"
edition = "2021"

[lib]
name = "trade"
path = "src/lib.rs"

[[bin]]
name = "trade"
path = "src/main.rs"

[dependencies]
interface = { path = "../interface" }
exchanges = { path = "../exchanges" }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
eyre = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
color-eyre = { workspace = true }
dotenv = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
ctor = { workspace = true }
jsonwebtoken = { workspace = true }
uuid = { workspace = true }
structopt = { workspace = true }

